[tool.poetry]
name = "web chess game"
version = "0.1.0"
description = ""
authors = ["@yermakhan.serikbayev <yermkahan.serikbayev@nu.edu.kz>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
